fix: Page would jump to featured-work section when sticky header is activated

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ header.sticky .title {
 }
 
 header.sticky + .container {
-	margin-top: 70px;
+	margin-top: 310px;
 }
 
 h1, h2, h4 {
